fix: PlayerWindowのz-index調整

--- a/src/components/views/MainView/index.module.css
+++ b/src/components/views/MainView/index.module.css
@@ -26,5 +26,6 @@
     position: absolute;
     top: 20px;
     right: 20px;
+    z-index: 999;
   }
 }
